<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="articleViewModel"
            type="android.example.artGallery.screens.kunstdetail.article.ArticleViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".screens.kunstdetail.auction.AuctionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/beschrijving_werk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/titel_werk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:text="@string/Titel"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@+id/artiest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/artiest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artiest"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titel_werk" />

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:layout_marginTop="16dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@+id/SCROLLER_ID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight="match_constraint"
                app:layout_constraintHeight_default="spread"
                app:layout_constraintHeight_max="400sp"
                app:layout_constraintHeight_min="300sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artiest"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

            <ScrollView
                android:id="@+id/SCROLLER_ID"
                android:layout_width="fill_parent"
                android:layout_height="140sp"
                android:layout_marginTop="8dp"
                android:fillViewport="true"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSlider">

                <TextView
                    android:id="@+id/omschrijving"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:text="@string/DummyOmschrijving"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/kopen_button"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </ScrollView>


            <Button
                android:id="@+id/kopen_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Kopen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/prijs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/huidige_bod"
                app:layout_constraintBottom_toTopOf="@+id/kopen_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SCROLLER_ID" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>