<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.kunstdetail.kopen.KopenPopupFragment">

    <ImageView
        android:id="@+id/artPicture"
        android:layout_width="159dp"
        android:layout_height="236dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="327dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mona" />

    <TextView
        android:id="@+id/artworkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="518dp"
        android:text="@string/mona_lisa"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="491dp"
        android:text="By Leonardo Da Vinci"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artPicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artworkName" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="326dp"
        android:text="@string/price"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artPicture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="325dp"
        android:text="€ 1000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artPicture"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toBottomOf="@+id/artistName" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="218dp"
        android:layout_height="57dp"
        android:background="@color/artGallery"
        android:shadowColor="#FFFFFF"
        android:text="@string/buy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artworkName"
        app:layout_constraintVertical_bias="0.533"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>